<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fond"
    tools:context=".option_frag" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn1"
            android:text="@string/t_profil"
            android:textColor="#455A64"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn1"
            android:text="@string/t_gesto"
            android:textColor="#455A64"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn1"
            android:text="@string/t_gestc"
            android:textColor="#455A64"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn1"
            android:text="@string/t_abonn"
            android:textColor="#455A64"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn1"
            android:text="@string/t_notif"
            android:textColor="#455A64"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</FrameLayout>